Avoid firing beforeunload event for same document navigations.

Bug: 736785
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_site_isolation
Change-Id: I0af5431812de23e692b16fe23d677a71806fe26c
Reviewed-on: https://chromium-review.googlesource.com/673065
Reviewed-by: Camille Lamy <clamy@chromium.org>
Commit-Queue: Łukasz Anforowicz <lukasza@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503175}
Former-commit-id: d92ba9dc7a7a271c450c2bb48d44e9ff838c0422